package sudoku;
/**
 * 为当前应用中很多类需要使用的常量完成定义
 * 将逻辑上相关联的一组类所需要的常量定义在一个类中是可以借鉴的，这样易于维护。
 */
public class SudokuConstants {
    /** 定义游戏面板的大小，针对当前游戏是指每一行的单元格数 */
    public static final int GRID_SIZE = 9;
}